# protogobazel

./: .editorconfig  .gitignore  .tool-versions  BUILD.bazel  MODULE.bazel  README.md  Taskfile.yml  bzl_protogen.sh  go.mod  go.sum  main.go
cmd/: BUILD.bazel  main.go
lib/gazelle/entry/: BUILD.bazel
lib/gazelle/protolang/: BUILD.bazel  lang.go  proto.go
lib/proto/barpb/: BUILD.bazel  bar.cool.go  bar.pb.go  bar2.pb.go  extra.go
lib/proto/coolpb/: BUILD.bazel  options.pb.go
lib/proto/foopb/: BUILD.bazel  foo.pb.go  foo_enum.pb.go
lib/protoc-plugins/: BUILD.bazel
lib/protoc-plugins/cool/: BUILD.bazel  cool.go
lib/protoc-plugins/protoc-gen-cool/: BUILD.bazel  cool.go
proto/src/: BUILD.bazel
proto/src/bar/: BUILD.bazel  bar.proto  bar2.proto
proto/src/cool/: BUILD.bazel  options.proto
proto/src/foo/: BUILD.bazel  foo.proto  foo_enum.proto
