load("@gazelle//:def.bzl", "gazelle", "gazelle_test")

gazelle_test(
    name = "gazelle_test",
    workspace = "//:BUILD.bazel",
)

gazelle(
    name = "gazelle",
    extra_args = [
        "cmd",
        "lib",
        "proto",
    ],
    gazelle = "//lib/gazelle/entry:gazelle",
)

# gazelle:exclude **/*.pb.go
# gazelle:go_grpc_compilers @rules_go//proto:go_grpc
