bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "gazelle", version = "0.38.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.9")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_protobuf",
    "com_github_grpc_ecosystem_grpc_gateway",
    "com_github_jhump_protoreflect",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
