load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cool_lib",
    srcs = ["cool.go"],
    importpath = "github.com/be9/protogobazel/lib/protoc-plugins/cool",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_google_protobuf//compiler/protogen",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_binary(
    name = "cool",
    embed = [":cool_lib"],
    visibility = ["//visibility:public"],
)
