load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "barpb_proto",
    srcs = [
        "bar.proto",
        "bar2.proto",
    ],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["//proto/src/cool:coolpb_proto"],
)

go_proto_library(
    name = "barpb_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "//lib/protoc-plugins:go_cool",
    ],
    importpath = "github.com/be9/protogobazel/lib/proto/barpb",
    proto = ":barpb_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/src/cool:coolpb"],
)

go_library(
    name = "barpb",
    embed = [
        ":barpb_go_proto",
        "//lib/proto/barpb:barpb",
    ],
    importpath = "github.com/be9/protogobazel/lib/proto/barpb",
    visibility = ["//visibility:public"],
)
