load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "coolpb_proto",
    srcs = ["options.proto"],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "coolpb_go_proto",
    importpath = "github.com/be9/protogobazel/lib/proto/coolpb",
    proto = ":coolpb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "coolpb",
    embed = [":coolpb_go_proto"],
    importpath = "github.com/be9/protogobazel/lib/proto/coolpb",
    visibility = ["//visibility:public"],
)
