load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "foopb_proto",
    srcs = [
        "foo.proto",
        "foo_enum.proto",
    ],
    strip_import_prefix = "/proto/src",
    visibility = ["//visibility:public"],
    deps = ["//proto/src/bar:barpb_proto"],
)

go_proto_library(
    name = "foopb_go_proto",
    importpath = "github.com/be9/protogobazel/lib/proto/foopb",
    proto = ":foopb_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/src/bar:barpb"],
)

go_library(
    name = "foopb",
    embed = [":foopb_go_proto"],
    importpath = "github.com/be9/protogobazel/lib/proto/foopb",
    visibility = ["//visibility:public"],
)
